<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentOne">

    <EditText
        android:id="@+id/definitionEditText"
        android:layout_width="241dp"
        android:layout_height="72dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/definitionHint"
        android:imeOptions="actionDone"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/termEditText" />

    <EditText
        android:id="@+id/termEditText"
        android:layout_width="238dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="128dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/termHint"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/saveButton"
        android:layout_width="79dp"
        android:layout_height="38dp"
        android:layout_marginTop="224dp"
        android:layout_marginEnd="28dp"
        android:background="@color/lilac"
        android:text="@string/save"
        android:textColor="@color/darkPurple"
        android:textStyle="bold"
        app:backgroundTint="@color/lilac"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="377dp"
        android:layout_height="360dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveButton"
        app:layout_constraintVertical_bias="0.84">

        <LinearLayout
            android:id="@+id/wordsLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:orientation="vertical" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>